--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<a href="https://twitter.com/i/status/1666069629888757761">Cardanzo is born</a>
 	<hr>
 	<h1>Cardanzo.app</h1>
+    <h2>Vereion 0.0.0</a>
 	<section>
 	<p class="q">What is it?</p>
 	<p>Nothing, yet. It will deploy existing DAPS using Cardano. It will trade with NFTs. It will employ some sort of AI engine, probably written in Mojo, open-source, github hosted.</p>
