--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 	<style>
 		body {
 			background: orange;
+            font-family: Rockwell, serif;
 			color: navy;
 		}
 		section {
+            font-family: Rockwell, serif;
+            font-size: 20px;
+            font-weight: 600;
 			background: azure;
 			margin: 8px;
 			padding: 20px;
@@ -21,7 +25,7 @@
 	<a href="https://twitter.com/i/status/1666069629888757761">Cardanzo is born</a>
 	<hr>
 	<h1>Cardanzo.app</h1>
-    <h2>Vereion 0.0.0</a>
+    <h2>Vereion 0.0.1</h2>
 	<section>
 	<p class="q">What is it?</p>
 	<p>Nothing, yet. It will deploy existing DAPS using Cardano. It will trade with NFTs. It will employ some sort of AI engine, probably written in Mojo, open-source, github hosted.</p>
