--- a/index.html
+++ b/index.html
@@ -8,31 +8,59 @@
 			color: navy;
 		}
 		section {
-            font-family: Rockwell, serif;
             font-size: 20px;
             font-weight: 600;
 			background: azure;
 			margin: 8px;
 			padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            flex-wrap: wrap;
 		}
+        .row {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            align-items: start;
+            gap: 4px;
+        }
+        .box {
+            display: block;
+            width: 25%;
+            min-width: 300px;
+            padding: 8px;
+            margin: 4px;
+            background: white;
+        }
 		.q {
 			font-style: italic;
 		}
 	</style>
 </head>
 <body>
+    <section>
 	<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Bullish on <a href="https://twitter.com/hashtag/Cardanzo?src=hash&amp;ref_src=twsrc%5Etfw">#Cardanzo</a> <a href="https://t.co/plT31veVTU">https://t.co/plT31veVTU</a></p>&mdash; $HOSKY Token 💩 (@hoskytoken) <a href="https://twitter.com/hoskytoken/status/1666152835354853384?ref_src=twsrc%5Etfw">June 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	<a href="https://twitter.com/i/status/1666069629888757761">Cardanzo is born</a>
+    </section>
 	<hr>
 	<h1>Cardanzo.app</h1>
-    <h2>Vereion 0.0.1</h2>
+    <h2>Vereion 0.0.2</h2>
 	<section>
-	<p class="q">What is it?</p>
-	<p>Nothing, yet. It will deploy existing DAPS using Cardano. It will trade with NFTs. It will employ some sort of AI engine, probably written in Mojo, open-source, github hosted.</p>
-	<p class="q">Who is it?</p>
-	<p>It will be open-sorce so developers who are interested in working on this can join in the fun via github.</p>
-	<p class="q">Why is it?</p>
-	<p>ADA is a currency that can already be used in a metaverse, for NFTs, by employing AI create a simple ecosystem for rewarding developers as owners: instead of being paid nothing for open-source projects or offering employment, projects are assigned a number of NFTs which cost (for example) 100 ADA each.  Developers can obtain the NFTs and that establishes the capitial base for the project and its ownership.  AI will value the project and guide the value of the NFT shares. Users can also buy Client NFTs to use the project. The idea is to create a remote development ecosystem, mediated by an AI engine to create useful things.</p> 
-	</section>
-	<p>Cardanzo is a project fostered by Software Antelope Ltd - a company registered in the UK.</p>
+    <article class="row">
+        <div class="box">
+            <p class="q">What is it?</p>
+            <p>Nothing, yet. It will deploy existing DAPS using Cardano. It will trade with NFTs. It will employ some sort of AI engine, probably written in Mojo, open-source, github hosted.</p>
+        </div>
+        <div class="box">
+            <p class="q">Who is it?</p>
+            <p>It will be open-sorce so developers who are interested in working on this can join in the fun via github.</p>
+        </div>
+        <div class="box">
+            <p class="q">Why is it?</p>
+            <p>ADA is a currency that can already be used in a metaverse, for NFTs, by employing AI create a simple ecosystem for rewarding developers as owners: instead of being paid nothing for open-source projects or offering employment, projects are assigned a number of NFTs which cost (for example) 100 ADA each.  Developers can obtain the NFTs and that establishes the capitial base for the project and its ownership.  AI will value the project and guide the value of the NFT shares. Users can also buy Client NFTs to use the project. The idea is to create a remote development ecosystem, mediated by an AI engine to create useful things.</p> 
+        </div>
+    </article>
+    </section>
+    <p>Cardanzo is a project fostered by Software Antelope Ltd - a company registered in the UK.</p>
 </body>
