--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 	<title>cardanzo.app</title>
 	<style>
 		body {
@@ -40,25 +39,44 @@
 </head>
 <body>
     <section>
-	<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Bullish on <a href="https://twitter.com/hashtag/Cardanzo?src=hash&amp;ref_src=twsrc%5Etfw">#Cardanzo</a> <a href="https://t.co/plT31veVTU">https://t.co/plT31veVTU</a></p>&mdash; $HOSKY Token 💩 (@hoskytoken) <a href="https://twitter.com/hoskytoken/status/1666152835354853384?ref_src=twsrc%5Etfw">June 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	<a href="https://twitter.com/i/status/1666069629888757761">Cardanzo is born</a>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Bullish on <a href="https://twitter.com/hashtag/Cardanzo?src=hash&amp;ref_src=twsrc%5Etfw">#Cardanzo</a> <a href="https://t.co/plT31veVTU">https://t.co/plT31veVTU</a></p>&mdash; $HOSKY Token 💩 (@hoskytoken) <a href="https://twitter.com/hoskytoken/status/1666152835354853384?ref_src=twsrc%5Etfw">June 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="https://twitter.com/i/status/1666069629888757761">Cardanzo is an accident</a>
     </section>
 	<hr>
 	<h1>Cardanzo.app</h1>
-    <h2>Vereion 0.0.2</h2>
+    <h2>Vereion 0.0.3</h2>
 	<section>
     <article class="row">
         <div class="box">
             <p class="q">What is it?</p>
-            <p>Nothing, yet. It will deploy existing DAPS using Cardano. It will trade with NFTs. It will employ some sort of AI engine, probably written in Mojo, open-source, github hosted.</p>
+            <p>
+                Nothing, yet. It may deploy existing DAPS using Cardano. It may trade with NFTs. 
+                It could employ some sort of AI engine, probably written in Mojo, open-source, 
+                github hosted.</p>
         </div>
         <div class="box">
             <p class="q">Who is it?</p>
-            <p>It will be open-sorce so developers who are interested in working on this can join in the fun via github.</p>
+            <p>
+                It will be open-sorce so developers who are interested in working on this can join in the fun via github.
+                At the moment there are no developers working on this. If you want, then follow our github.
+            </p>
         </div>
         <div class="box">
             <p class="q">Why is it?</p>
-            <p>ADA is a currency that can already be used in a metaverse, for NFTs, by employing AI create a simple ecosystem for rewarding developers as owners: instead of being paid nothing for open-source projects or offering employment, projects are assigned a number of NFTs which cost (for example) 100 ADA each.  Developers can obtain the NFTs and that establishes the capitial base for the project and its ownership.  AI will value the project and guide the value of the NFT shares. Users can also buy Client NFTs to use the project. The idea is to create a remote development ecosystem, mediated by an AI engine to create useful things.</p> 
+            <p>
+                ADA is a currency that can already be used in a metaverse, for NFTs, by employing AI create a simple ecosystem 
+                for rewarding developers as owners: instead of being paid nothing for open-source projects or offering employment, 
+                projects are assigned a number of NFTs which cost (for example) 100 ADA each.  
+            </p>
+        </div>
+        <div class="box">
+            <p class="q">How?</p>
+            <p>
+                Capitalisation: Developers obtain NFTs to establish the capital base for a project and its ownership.  
+                AI values projects to guide the value of the NFT shares. 
+                Users can also buy Client NFTs to use the project. 
+                The idea is to create a remote development ecosystem, mediated by an AI engine to create useful things.
+            </p> 
         </div>
     </article>
     </section>
